# cppKit-learn

./: .gitignore  CMakeLists.txt  README.md
src/lib/core/: NDArray.h  NDarray.tpp  Tensor.cpp  Tensor.h  Tensor.tpp  View.cpp  View.h  View.tpp
src/lib/core/indexing/: Index.cpp  Index.h  Iterator.h  Iterator.tpp  Range.tpp
src/lib/core/iterator/: Index.cpp  Index.h  Iterable.h  Iterator.cpp  Iterator.h  Iterator.tpp  NDArray.h  Range.h  TensorIterator.cpp  TensorIterator.h  ViewIterator.cpp  ViewIterator.h
src/lib/math/: broadcasting.cpp  operations.cpp  operators.cpp
src/test/: main.cpp  test.cpp
src/test/tensor/: indexing.cpp  initialization.cpp  slicing.cpp
src/test/view/: initialization.cpp
